@@ -1,6 +1,7 @@
 PREFIX	= ../../..
+LIBNAME	= libdynp.a
 
 .PHONY: all
-all: install_headers
+all: install_headers install_libs
 
 include $(PREFIX)/rules.mk
